browser/themes/gnomestripe/browser/browser.css
/* ... */
#urlbar-search-splitter {
  -moz-appearance: none;
  width: 8px;
  -moz-margin-start: -4px;
}

#urlbar-search-splitter + #urlbar-container > #urlbar ,
#urlbar-search-splitter + #search-container > #searchbar > .searchbar-textbox {
  -moz-margin-start: 0;
}

#wrapper-urlbar-container #urlbar {
  -moz-user-input: disabled;
  cursor: -moz-grab;
}

#wrapper-urlbar-container #urlbar > .autocomplete-textbox-container {
  -moz-appearance: textfield;
}

#wrapper-urlbar-container #urlbar > .autocomplete-history-dropmarker {
  display: none;
}

#PopupAutoComplete {
  direction: ltr !important;
}

#PopupAutoCompleteRichResult {
  direction: ltr !important;
}

#PopupAutoComplete[chromedir="rtl"] > tree > treerows {
  direction: rtl;
}

#PopupAutoComplete .autocomplete-treebody {
  direction: ltr;
}


#page-proxy-stack,
#page-proxy-favicon,
#urlbar-throbber {
  width: 16px;
  height: 16px;
}

#page-proxy-stack {
  margin: 2px 3px;
}

#page-proxy-favicon:not([src]) {
  list-style-image: url("chrome://global/skin/icons/folder-item.png");
  -moz-image-region: rect(0px, 16px, 16px, 0px);
}

#page-proxy-favicon[pageproxystate="invalid"] {
  -moz-image-region: rect(16px, 16px, 32px, 0px);
}

#urlbar-throbber {
  list-style-image: url("chrome://global/skin/throbber/Throbber-small.gif");
}


#identity-box {
  background-color: -moz-dialog;
  color: -moz-dialogtext;
  -moz-border-end: 1px solid ThreeDShadow;
}

#identity-box:focus {
  outline: 1px dotted -moz-DialogText;
}

#identity-icon-label {
  padding: 0 2px;
  margin: 0;
}

#identity-icon-label[value=""] {
  display: none;
}

#identity-box.verifiedIdentity > hbox {
  background-color: rgba(0, 255, 0, 0.25);
}


#identity-popup-icon {
  height: 64px;
  width: 64px;
  padding: 0;
  list-style-image: url("chrome://browser/skin/identity.png");
  -moz-image-region: rect(0px, 64px, 64px, 0px);
}

#identity-popup.verifiedDomain > #identity-popup-container > #identity-popup-icon {
  -moz-image-region: rect(64px, 64px, 128px, 0px);
}

#identity-popup.verifiedIdentity > #identity-popup-container > #identity-popup-icon {
  -moz-image-region: rect(128px, 64px, 192px, 0px);
}


#identity-popup-content-box > description,
#identity-popup-encryption-label {
  white-space: pre-wrap;
  color: black;
  padding-left: 15px;
  margin: 2px 0 4px;
}

#identity-popup-content-box > label {
  white-space: pre-wrap;
  padding-left: 15px;
  margin: 0;
}

#identity-popup-content-host ,
#identity-popup-content-owner {
  font-weight: bold;
  max-width: 300px;
}

#identity-popup-content-host ,
#identity-popup-content-box.verifiedIdentity > #identity-popup-content-owner {
  font-size: 140%;
}

#identity-popup-content-owner {
  margin-bottom: 0 !important;
}

#identity-popup-content-verifier {
  margin: 4px 0 2px;
}

#identity-popup-content-box.verifiedIdentity > #identity-popup-encryption ,
#identity-popup-content-box.verifiedDomain > #identity-popup-encryption {
  margin-top: 10px;
  margin-left: -18px;
}

#identity-popup-content-box.verifiedIdentity > #identity-popup-encryption > vbox > #identity-popup-encryption-icon ,
#identity-popup-content-box.verifiedDomain > #identity-popup-encryption > vbox > #identity-popup-encryption-icon {
  list-style-image: url("chrome://browser/skin/Secure.png");
}


#identity-popup-container {
  background-image: none;
  background-color: white;
  min-width: 280px;
  padding: 10px;
}


#urlbar[level="high"][pageproxystate="valid"] > .autocomplete-textbox-container,
#urlbar[level="low"][pageproxystate="valid"] > .autocomplete-textbox-container,
#urlbar[level="high"][pageproxystate="valid"] #autocomplete-security-wrapper,
#urlbar[level="low"][pageproxystate="valid"] #autocomplete-security-wrapper {
  background-color: #F5F6BE; 
  color: #000000;
}

#urlbar > .autocomplete-textbox-container {
  -moz-binding: url(chrome://browser/skin/browser.xml#autocomplete-security-wrapper);
}

#autocomplete-security-wrapper {
  
  direction: ltr;
  -moz-box-align: center;
  
  margin-right: -3px;
}

#urlbar[chromedir="rtl"] > .autocomplete-textbox-container > #autocomplete-security-wrapper {
  margin-right: 0px;
  margin-left: -3px;
}

#wrapper-urlbar-container #urlbar >
.autocomplete-textbox-container > #autocomplete-security-wrapper {
  margin: 0px;
}


#feed-button,
#feed-button > .button-box,
#feed-button:hover:active > .button-box {
  padding: 0px;
  margin: 0px;
  border: 0px; 
  background-color: transparent;
}

#feed-button > hbox > .button-menu-dropmarker,
#feed-button > hbox > .button-text {
  display: none;
}

#feed-button {
  -moz-binding: url("chrome://global/content/bindings/button.xml#menu");
  -moz-appearance: none; 
  min-width: 0px; 
  margin-right: 1px !important;
}

#feed-button[feeds] {
  list-style-image: url("chrome://browser/skin/page-livemarks.png");
}


#urlbar .autocomplete-textbox-container {
  -moz-box-align: stretch;
}

#treecolAutoCompleteImage {
  max-width : 36px; 
}

.ac-result-type-bookmark,
.autocomplete-treebody::-moz-tree-image(bookmark, treecolAutoCompleteImage) {
  list-style-image: url("chrome://browser/skin/places/pageStarred.png");
  width: 16px;
  height: 16px;
}

.ac-result-type-tag,
.autocomplete-treebody::-moz-tree-image(tag, treecolAutoCompleteImage) {
  list-style-image: url("chrome://browser/skin/places/tag.png");
  width: 16px;
  height: 16px;
}

.ac-comment {
  font-size: larger;
}

.ac-url-text {
  color: #336633;
}

.autocomplete-treebody::-moz-tree-cell-text(treecolAutoCompleteComment) {
  color: GrayText;
}

.ac-comment[selected="true"], .ac-url-text[selected="true"] {
  color: inherit !important;
}

.autocomplete-treebody::-moz-tree-cell-text(suggesthint, treecolAutoCompleteComment), 
.autocomplete-treebody::-moz-tree-cell-text(suggestfirst, treecolAutoCompleteComment) {
  color: GrayText;
  font-size: smaller;
}

.autocomplete-treebody::-moz-tree-cell(suggesthint) {
  border-top: 1px solid GrayText;
}


#go-button {
  padding: 3px 2px 2px 2px;
  list-style-image: url("chrome://browser/skin/Go-arrow.png");
}
/* ... */

